vlib/v/checker/tests/immutable_arg.out
vlib/v/checker/tests/immutable_arg.vv:13:8: error: `a` is immutable, declare it with `mut` to make it mutable 
   11 | fn main() {
   12 |     a := St{e: 2}
   13 |     f(mut a)
      |           ^
   14 | }
